@@ -78,12 +78,23 @@ class EditorDocumentBase(ParentEditorDocument):
 		except IOError, details:
 			win32ui.MessageBox("Error - could not save file\r\n\r\n%s"%details)
 			return 0
-		except UnicodeEncodeError, details:
-			win32ui.MessageBox("Encoding failed: \r\n%s"%details +
+		except (UnicodeEncodeError, LookupError), details:
+			rc = win32ui.MessageBox("Encoding failed: \r\n%s"%details +
 					'\r\nPlease add desired source encoding as first line of file, eg \r\n' +
-					'# -*- coding: mbcs -*-',
-					"File save failed")
-			return 0
+					'# -*- coding: mbcs -*-\r\n\r\n' +
+					'If you continue, the file will be saved as binary and will\r\n' +
+					'not be valid in the declared encoding.\r\n\r\n' +
+					'Save the file as binary with an invalid encoding?',
+					"File save failed",
+					win32con.MB_YESNO | win32con.MB_DEFBUTTON2)
+			if rc==win32con.IDYES:
+				try:
+					self.SaveFile(fileName, encoding="latin-1")
+				except IOError, details:
+					win32ui.MessageBox("Error - could not save file\r\n\r\n%s"%details)
+					return 0
+			else:
+				return 0
 		self.SetModifiedFlag(0) # No longer dirty
 		self.bDeclinedReload = 0 # They probably want to know if it changes again!
 		win32ui.AddToRecentFileList(fileName)
